# WasmStudy

./: README.md  comandos_automake
Hello_World/: a.out.html  a.out.js  a.out.wasm  hello  hello.cpp  output.js  output.wasm
autotools/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.ac  configure~  raiz
autotools/.deps/: raiz.Po
autotools/autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4
autotoolsFinal/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  final.html  final.js  final.wasm  totriste  totriste.wasm
autotoolsFinal/.deps/: main.Po  util.Po  util1.Po
autotoolsFinal/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.1  traces.2  traces.3
autotoolsFinal/src/: main.cpp  util.cpp  util.hpp  util1.cpp
fib/: fib.cpp  fib.html  fib.js  fib.wasm
hello_world_sdl/: hello.js  hello.wasm  hello_world_sdl.cpp
streaming/: streaming.cpp  streaming.js  streaming.wasm  streming.html
webp/: compilation  loadImage.js  webp.cpp  webp.html  webp.js  webp.wasm
wrapping/: wrapping.cpp  wrapping.html  wrapping.js  wrapping.wasm
